opLT cor:opLT_step proof refactor

--- a/common/harTrig.tex
+++ b/common/harTrig.tex
@@ -403,9 +403,9 @@ Let $\ff^\prime(x)\eqd\opDif\ff(x)$.
 \label{thm:sin-x}
 \label{thm:cos-x}
 %--------------------------------------
-\thmbox{\begin{array}{rcc|rcrC}
-  \cos(0) &=& 1  & \cos(-x) &=&  \cos(x) & \forall x\in\R\\
-  \sin(0) &=& 0  & \sin(-x) &=& -\sin(x) & \forall x\in\R
+\thmbox{\begin{array}{rcc|rcrCD}
+  \cos(0) &=& 1  & \cos(-x) &=&  \cos(x) & \forall x\in\R & (\prope{even})\\
+  \sin(0) &=& 0  & \sin(-x) &=& -\sin(x) & \forall x\in\R & (\prope{odd})
 \end{array}}
 \end{theorem}
 \begin{proof}
