--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -96,7 +96,7 @@ and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
 Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
 and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \thmbox{\begin{array}{>{\ds}l        c>{\ds}l                                             D     l              @{\hspace{2pt}}l                                             C                       D}
-    \mc{3}{H}{Transform}                                                                & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|N}{Domain}    & \mc{1}{|H}{Property}
+    \mc{3}{H}{Mapping}                                                                  & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|H}{Domain}    & \mc{1}{|H}{Property}
   \\\hline
     \opLT\brs{\fg(x-\alpha)}        &=& e^{-\alpha s} \;\fG(s)                          & for & \Real(s)                    & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\ope{translation})
   \\\opLT\brs{\fg(\alpha x)}        &=& \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}} & for & \Real\brp{\frac{s}{\alpha}} & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\ope{dilation})
@@ -147,7 +147,7 @@ and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 %--------------------------------------
 Let $\opLT$, $\fG(s)$, $A$, and $B$ be defined as in \prefpp{thm:opLT_transversal}.
 \corbox{\begin{array}{>{\ds}lc>{\ds}l   D       l              @{\hspace{2pt}}l     C                       D}
-    \mc{3}{H}{Transform}                & \mc{3}{|H}{Radius of Convergence}       & \mc{1}{|N}{Domain}    & \mc{1}{|H}{Property}
+    \mc{3}{H}{Mapping}                  & \mc{3}{|H}{Radius of Convergence}       & \mc{1}{|H}{Domain}    & \mc{1}{|H}{Property}
   \\\hline%                             &     &              &                    &                       &
     \opLT\brs{\fg(-x)}  &=& \fG\brp{-s} & for & \Real\brp{s} & \in\intcc{-B}{-A}  & \forall x,\alpha\in\C & (\ope{reversal})
 \end{array}}
@@ -185,7 +185,7 @@ and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
 Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
 and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \thmbox{\begin{array}{>{\ds}l        c>{\ds}l                                             D     l              @{\hspace{2pt}}l                                             C                       D}
-    \mc{3}{H}{Transform}                                                                & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|N}{Domain}    & \mc{1}{|H}{Property}
+    \mc{3}{H}{Mapping}                                                                  & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|H}{Domain}    & \mc{1}{|H}{Property}
   \\\hline
     \opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s)                                 & for & \Real(s)                    & \in\intcc{A}{B}\seti\intcc{C}{D}            & \forall x,\alpha\in\C & (\prope{additive})
   \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)                                    & for & \Real(s)                    & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\prope{homogeneous})
@@ -204,7 +204,7 @@ is the \structe{radius of convergence} of $\opLT\brs{\ff(x)}$.
 Let $A_n$ and $B_n$ be real numbers such that $\intcc{A_n}{B_n}$
 is the \structe{radius of convergence} of $\opLT\brs{\fg_n(x)}$.
 \corbox{\begin{array}{>{\ds}l                      c  >{\ds}l                                       D     >{\ds}l                                               C}
-    \mc{3}{H}{Transform}                                                                          & \mc{2}{|H}{Radius of Convergence}                         & \mc{1}{|N}{Domain}
+    \mc{3}{H}{Mapping}                                                                            & \mc{2}{|H}{Radius of Convergence}                         & \mc{1}{|H}{Domain}
   \\\hline
     \opLT\brs{ 0                               }  &=&  0                                          & for & \Real(s)\in\intcc{A}{B}                             & \forall x\in\C
   \\\opLT\brs{ -\fg(x)                         }  &=& -\opLT\brs{\fg(x)}                          & for & \Real(s)\in\intcc{A}{B}                             & \forall x\in\C
@@ -238,7 +238,7 @@ and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
 Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
 and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \thmbox{\begin{array}{>{\ds}l        c>{\ds}l           D     l        @{\hspace{2pt}}l                                C }
-    \mc{3}{H}{Transform}                              & \mc{3}{|H}{Radius of Convergence}                            & \mc{1}{|N}{Domain}    %& \mc{1}{|H}{Property}
+    \mc{3}{H}{Mapping}                                & \mc{3}{|H}{Radius of Convergence}                            & \mc{1}{|H}{Domain}    %& \mc{1}{|H}{Property}
   \\\hline
     \opLT\brs{e^{-\alpha x} \fg(x)} &=& \fG(s+\alpha) & for & \Real(s) & \in\intcc{A-\Real(\alpha)}{B-\Real(\alpha)} & \forall x,\alpha\in\C %& (\ope{modulation})
 \end{array}}
@@ -269,7 +269,7 @@ and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
 Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
 and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \corbox{\begin{array}{>{\ds}l               c>{\ds}r                                                       D     l        @{\hspace{2pt}}l   C }
-    \mc{3}{H}{Transform}                                                                                 & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|N}{Domain}    %& \mc{1}{|H}{Property}
+    \mc{3}{H}{Mapping}                                                                                   & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|H}{Domain}    %& \mc{1}{|H}{Property}
   \\\hline
     \opLT\brs{\cos\brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o) & for & \Real(s) & \in\intcc{A}{B} & \forall x,\alpha\in\C %& (\ope{modulation})
   \\[2ex]
@@ -327,11 +327,13 @@ The \fnctd{Heaviside step function} $\step(x)$ or \fnctd{unit step function} is 
 \label{thm:opLT_step}
 %---------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
-and $\step(x)$ the \fncte{unit step} function.
-\thmbox{\begin{array}{>{\ds}lc>{\ds}l         Dl                                   C                 }
-    \mc{3}{H}{Transform}                    & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|N}{Domain}
+and $\step(x)$ the \fncte{unit step} function \xref{def:step}.
+\thmbox{\begin{array}{>{\ds}lc>{\ds}r          Dl                                   C                 }
+    \mc{3}{H}{Mapping}                       & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|H}{Domain}
   \\\hline
-    \opLT\brs{\step(x)}     &=& \frac{1}{s} & for & \Real(s) > 0                      & \forall x\in\R
+    \opLT\brs{\step(x)}     &=& \frac{ 1}{s} & for & \Real(s) > 0                  & \forall x\in\R
+  \\[2ex]
+    \opLT\brs{\step(-x)}    &=& \frac{-1}{s} & for & \Real(s) < 0                  & x\in\R
 \end{array}}
 \end{theorem}
 \begin{proof}
@@ -350,6 +352,12 @@ and $\step(x)$ the \fncte{unit step} function.
     && \forall\Real(s) > 0
   \\&= \frac{1}{s}
     && \forall\Real(s) > 0
+  \\\\
+  \opLT\brs{\step(-x)}
+    &= \frac{-1}{s}
+    && \Real(s) < 0
+   %&& \text{by \ope{reversal} property \xref{cor:opLT_reversal} and \pref{thm:opLT_step}}
+    && \text{by \pref{thm:opLT_step} and \pref{cor:opLT_reversal}}
 \end{align*}
 \end{proof}
 
@@ -362,57 +370,88 @@ and $\step(x)$ the \fncte{unit step} function.
 %---------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
-\corbox{\begin{array}{F>{\ds}lc>{\ds}c     D     l                             C }
-    \mc{3}{H}{Transform}                & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|N}{Domain}
+\corbox{\begin{array}{F>{\ds}lc>{\ds}c                                                     D     l                             C }
+    &\mc{3}{H}{Mapping}                                                                  & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|H}{Domain}
   \\\hline
          (1).& \opLT\brs{\step(x)\cos(\omega_o x)}  &=& \frac{s}{s^2+\omega_o^2}         & for & \Real(s) > 0 & x,\omega_o\in\R
   \\[2ex](2).& \opLT\brs{\step(x)\sin(\omega_o x)}  &=& \frac{\omega_o}{s^2+\omega_o^2}  & for & \Real(s) > 0 & x,\omega_o\in\R
-  \\[2ex](3).& \opLT\brs{\step(-x)}                 &=& \frac{-1}{s}                     & for & \Real(s) < 0 & x\in\R
-  \\[2ex](4).& \opLT\brs{\step(-x)\cos(\omega_o x)} &=& \frac{-s}{s^2+\omega_o^2}        & for & \Real(s) < 0 & x,\omega_o\in\R
-  \\[2ex](5).& \opLT\brs{\step(-x)\sin(\omega_o x)} &=& \frac{-\omega_o}{s^2+\omega_o^2} & for & \Real(s) < 0 & x,\omega_o\in\R
+  \\[2ex](3).& \opLT\brs{\step(-x)\cos(\omega_o x)} &=& \frac{-s}{s^2+\omega_o^2}        & for & \Real(s) < 0 & x,\omega_o\in\R
+  \\[2ex](4).& \opLT\brs{\step(-x)\sin(\omega_o x)} &=& \frac{-\omega_o}{s^2+\omega_o^2} & for & \Real(s) < 0 & x,\omega_o\in\R
 \end{array}}
 \end{corollary}
 \begin{proof}
 \begin{align*}
-  \opLT\brs{\step(x)\cos(\omega_o x)}
-    &= \frac{1}{2}\brs{\frac{1}{s-i\omega_o}} + \frac{1}{2}\brs{\frac{1}{s+i\omega_o}}
+  \opLT\brs{\cos(\omega_o x)\step(x)}(s)
+    &= \frac{1}{2}\opLT\brs{\step(x)}(s-i\omega_o) 
+     + \frac{1}{2}\opLT\brs{\step(x)}(s+i\omega_o) 
+    && 
+    && \text{by \prope{modulation}}
+    && \text{\xref{cor:opLT_mod}}
+  \\&= \frac{1}{2}\brs{\frac{1}{s-i\omega_o}} 
+     + \frac{1}{2}\brs{\frac{1}{s+i\omega_o}}
     && \Real(s) > 0
-    && \text{by \prefp{cor:opLT_mod}, \pref{thm:opLT_step}}
+    && \text{by \prope{causal} property}
+    && \text{\xref{thm:opLT_step}}
+  \\&= \mathrlap{
+       \frac{1}{2}\brs{\frac{1}{s-i\omega_o}}\brs{\frac{s+i\omega_o}{s+i\omega_o}}
+     + \frac{1}{2}\brs{\frac{1}{s+i\omega_o}}\brs{\frac{s-i\omega_o}{s-i\omega_o}}
+     \qquad\text{(\ope{Rationalizing the Denominator})}
+     }
+  \\&= \frac{1}{2}\brs{\frac{(s+i\omega_o) + (s-i\omega_o)}{s^2+\omega_o^2}}
+    && \Real(s) > 0
   \\&= \frac{s}{s^2+\omega_o^2}
     && \Real(s) > 0
   \\
-  \opLT\brs{\step(x)\sin(\omega_o x)}
-    &= -\frac{i}{2}\brs{\frac{1}{s-i\omega_o}} + \frac{i}{2}\brs{\frac{1}{s+i\omega_o}}
+  \opLT\brs{\sin(\omega_o x)\step(x)}(s)
+    &= \frac{1}{2}\opLT\brs{\step(x)}(s-i\omega_o) 
+     + \frac{1}{2}\opLT\brs{\step(x)}(s+i\omega_o) 
+    && 
+    && \text{by \prope{modulation}}
+    && \text{\xref{cor:opLT_mod}}
+  \\&= -\frac{i}{2}\brs{\frac{1}{s-i\omega_o}} 
+       +\frac{i}{2}\brs{\frac{1}{s+i\omega_o}}
     && \Real(s) > 0
-    && \text{by \pref{cor:opLT_mod} and \pref{thm:opLT_step}}
+    && \text{by \prope{causal} property}
+    && \text{\xref{thm:opLT_step}}
+  \\&= \mathrlap{
+     - \frac{i}{2}\brs{\frac{1}{s-i\omega_o}}\brs{\frac{s+i\omega_o}{s+i\omega_o}}
+     + \frac{i}{2}\brs{\frac{1}{s+i\omega_o}}\brs{\frac{s-i\omega_o}{s-i\omega_o}}
+     \qquad\text{(\ope{Rationalizing the Denominator})}
+     }
+  \\&= \frac{i}{2}\brs{\frac{-(s+i\omega_o) + (s-i\omega_o)}{s^2+\omega_o^2}}
+    && \Real(s) > 0
   \\&= \frac{\omega_o}{s^2+\omega_o^2}
     && \Real(s) > 0
   \\
-  \opLT\brs{\step(-x)}
-    &= \frac{-1}{s}
-    && \Real(s) < 0
-   %&& \text{by \ope{reversal} property \xref{cor:opLT_reversal} and \pref{thm:opLT_step}}
-    && \text{by \pref{thm:opLT_step} and \pref{cor:opLT_reversal}}
-  \\
   \opLT\brs{\step(-x)\cos(\omega_o x)}
     &= \opLT\brs{\step(-x)\cos(\omega_o(-x))}
-    &&
-    && \text{by \prefp{thm:cos-x}}
+    && \mathrlap{
+       \text{by \prope{even} property of $\cos(x)$ 
+             \xref{thm:cos-x}}}
   \\&= \frac{(-s)}{(-s)^2+\omega_o^2}
     && \Real(s) < 0
-   %&& \text{by (1) and \ope{reversal} property \xref{cor:opLT_reversal}}
-    && \text{by (1) and \pref{cor:opLT_reversal}}
+    && \text{by (1) and \prope{reversal}}
+    && \text{\xref{cor:opLT_reversal}}
   \\&= \frac{-s}{s^2+\omega_o^2}
     && \Real(s) < 0
   \\
-  \opLT\brs{\step(-x)\sin(\omega_o x)}
-    &= \opLT\brs{-\step(-x)\sin(\omega_o(-x)}
+  \opLT\brs{\sin(\omega_o x)\step(-x)}(s)
+    &= \opLT\brs{-\sin(\omega_o(-x))\step(-x)}
+    && \mathrlap{
+       \text{by \prope{odd} property of $\sin(x)$ 
+             \xref{thm:sin-x}}}
+  \\&= -\opLT\brs{\sin(\omega_o(-x))\step(-x)}(s)
+    && \mathrlap{
+       \text{by \prope{homogeneous} property
+       \xref{thm:opLT_linear}}}
+  \\&= -\opLT\brs{\sin(\omega_o x)\step(x)}(-s)
     &&
-    && \text{by \prefp{thm:sin-x}}
-  \\&= \frac{-\omega_o}{(-s)^2+\omega_o^2}
+    && \text{by \prope{reversal} property}
+    && \text{\xref{cor:opLT_reversal}}
+  \\&= -\brs{\frac{\omega_o}{(-s)^2+\omega_o^2}}
     && \Real(s) < 0
-    && \text{by (2) and \pref{cor:opLT_reversal}}
-   %&& \text{by (2) and \ope{reversal} property \xref{cor:opLT_reversal}}
+    && \text{by (2)}
+    && 
   \\&= \frac{-\omega_o}{s^2+\omega_o^2}
     && \Real(s) < 0
 \end{align*}
@@ -428,7 +467,7 @@ and $\step(x)$ the \fncte{unit step} function.
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 \corbox{\begin{array}{F>{\ds}lc>{\ds}c     D     l                             C }
-    \mc{3}{H}{Transform}                & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|N}{Domain}
+    \mc{3}{H}{Mapping}                  & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|H}{Domain}
   \\\hline
            (1).&\opLT\brs{\step(x)\cos(\omega_o x)e^{-\alpha x}} &=& \frac{s+\alpha}{(s+\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
     \\[2ex](2).&
@@ -527,7 +566,7 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 Let $A\eqd\Real(\alpha)$.
 \corbox{\begin{array}{>{\ds}lc>{\ds}l                                    D     l                            C }
-    \mc{3}{H}{Transform}                                               & \mc{2}{|H}{Radius of Convergence}& \mc{1}{|H}{Domain}
+    \mc{3}{H}{Mapping}                                                 & \mc{2}{|H}{Radius of Convergence}& \mc{1}{|H}{Domain}
   \\\hline%                                                            &                                  &
     \opLT\brs{e^{-\alpha\abs{x}}}  &=& \frac{2\alpha}{\alpha^2 - s^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
 \end{array}}
@@ -571,13 +610,13 @@ Let $A\eqd\Real(\alpha)$.
   \url{http://ece-research.unm.edu/bsanthan/ece541/table_ME.pdf}
   %\url{https://ethz.ch/content/dam/ethz/special-interest/baug/ibk/structural-mechanics-dam/education/identmeth/fourier.pdf}
   }
-\label{cor:opLT_expabs}
+\label{cor:opLT_cosabs}
 %---------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 Let $A\eqd\Real(\alpha)$.
 \corbox{\begin{array}{F>{\ds}lc>{\ds}l                                    D     l                                                    C }
-    &\mc{3}{H}{Transform}                                                                                          & \mc{2}{|H}{Radius of Convergence}& \mc{1}{|H}{Domain}
+    &\mc{3}{H}{Mapping}                                                                                            & \mc{2}{|H}{Radius of Convergence}& \mc{1}{|H}{Domain}
   \\\hline%                                                                                                        &                                  &
     (1).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step( x)}  &=& \frac{ s+\alpha}{(s+\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
   \\(2).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}  &=& \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
@@ -588,22 +627,39 @@ Let $A\eqd\Real(\alpha)$.
 \begin{enumerate}
   \item Proof for (1):
     \begin{align*}
-      &\opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
-      \\&= \opLT\brs{\cos( \omega_o x)e^{-\alpha x}\step( x)}
+      &\opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(x)}(s)
+      \\&= \opLT\brs{\cos( \omega_o x)e^{-\alpha x}\step( x)}(s)
+        &&
         && \text{by definition of $\step(x)$}
         && \text{\xref{def:step}}
+      \\&= \opLT\brs{\cos( \omega_o x)\step( x)}(s+\alpha)
+        && \forall \Real(s) \in \intoo{0-\Real(\alpha)}{\infty-\Real(\alpha)}
+        && \text{by \prope{modulation} property}
+        && \text{\xref{thm:opLT_mod}}
       \\&= \frac{s+\alpha}{(s+\alpha)^2 + \omega_o^2}
         && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
-        && \text{by \prefp{cor:opLT_step} and \prefp{thm:opLT_mod}}
+        && \text{by \prefp{cor:opLT_step}}
     \end{align*}
 
   \item Proof for (2):
     \begin{align*}
       &\opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}
+      \\&= \opLT\brs{\cos(\omega_o x)e^{ \alpha x}\step(-x)}
+        && \text{by definition of $\step(x)$}
+        && \text{\xref{def:step}}
       \\&= \opLT\brs{\cos(-\omega_o x)e^{ \alpha x}\step(-x)}
+        && \text{by \prope{even} property of $\cos(x)$}
+        && \text{\xref{thm:cos-x}}
+      \\&= \opLT\brs{e^{\alpha x}\cos(\omega_o(-x))\step(-x)}
+      \\&= \opLT{\mcom{\cos(\omega_o(-x))\step(-x)}{$\fg(x)$}}(s-\alpha)
+        && \text{by \prope{modulation} property}
+        && \text{\xref{thm:opLT_mod}}
+      \\&= \opLT{\mcom{\cos(\omega_o(-x))\step(-x)}{$\fg(x)$}}(s-\alpha)
+        && \text{by \prope{modulation} property}
+        && \text{\xref{thm:opLT_mod}}
       \\&= \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}
         && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
-        && \text{by \prefp{cor:opLT_step} and \prefp{thm:opLT_mod}}
+        && \text{by \pref{cor:opLT_step} and \prefp{thm:opLT_mod}}
     \end{align*}
 
   \item Proof for (3):
@@ -616,31 +672,7 @@ Let $A\eqd\Real(\alpha)$.
       \\&= \frac{s+\alpha}{(s+\alpha)^2 + \omega_o^2} +  \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}
         && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
     \end{align*}
-%\end{proof}
 
-%%-------------------------------------
-%\begin{example}
-%\footnote{
-%  \citerpcu{levy1958}{19}{with $\psi=0$, $\alpha_0=\alpha$, and $\alpha_1=1$}{https://archive.org/details/c_cowles_ieee_Levy/page/n21/},
-%  \url{http://ece-research.unm.edu/bsanthan/ece541/table_ME.pdf},
-%  %\url{https://ethz.ch/content/dam/ethz/special-interest/baug/ibk/structural-mechanics-dam/education/identmeth/fourier.pdf}
-%  }
-%\label{ex:opLT_cosexp}
-%%-------------------------------------
-%Let $\omega\eqd\Imag(s)$
-%(let $\omega$ be the \fncte{imaginary part} of the complex variable $s$).
-%\exbox{\begin{array}{>{\ds}rc>{\ds}lM}
-%  \opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}\step(x)}
-%    &=& \frac{s+\alpha}{(s+\alpha)^2 + \beta^2}
-%      & for $\Real(s)>-\alpha$
-%  \\
-%  \opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}\step(-x)}
-%    &=& \frac{-s+\alpha}{(s-\alpha)^2 + \beta^2}
-%      & for $\Real(s)<\alpha$
-%\end{array}}
-%\end{example}
-%\begin{proof}
-%\begin{enumerate}
   \item lemma: \label{ilem:opLT_cosexpstep}
     \\$\begin{array}{>{\ds}rclM}
          \lim_{x\to\infty}\brs{\frac{e^{(-s -\alpha \pm i\beta)x}}{-s -\alpha \pm i\beta}}
@@ -739,6 +771,69 @@ Let $A\eqd\Real(\alpha)$.
 \end{enumerate}
 \end{proof}
 
+%---------------------------------------
+\begin{corollary}
+\footnote{
+  \citerpgc{bracewell1978}{227}{007007013X}{Table 11.2 Some Laplace transforms},
+  \citerpcu{levy1958}{19}{with $\psi=0$, $\alpha_0=\alpha$, and $\alpha_1=1$}{https://archive.org/details/c_cowles_ieee_Levy/page/n21/},
+  \url{http://ece-research.unm.edu/bsanthan/ece541/table_ME.pdf}
+  %\url{https://ethz.ch/content/dam/ethz/special-interest/baug/ibk/structural-mechanics-dam/education/identmeth/fourier.pdf}
+  }
+\label{cor:opLT_sinabs}
+%---------------------------------------
+Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
+and $\step(x)$ the \fncte{unit step} function.
+Let $A\eqd\Real(\alpha)$.
+\corbox{\begin{array}{F>{\ds}lc>{\ds}l                                    D     l                                                    C }
+    &\mc{3}{H}{Mapping}                                                                                            & \mc{2}{|H}{Radius of Convergence}& \mc{1}{|H}{Domain}
+  \\\hline%                                                                                                        &                                  &
+    (1).& \opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}\step( x)}  &=& \frac{ \omega_o}{(s+\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
+  \\(2).& \opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}  &=& \frac{-\omega_o}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
+  \\(3).& \opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}         }  &=& \frac{ \omega_o}{(s+\alpha)^2 + \omega_o^2} +  \frac{-\omega_o}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
+\end{array}}
+\end{corollary}
+\begin{proof}
+\begin{enumerate}
+  \item Proof for (1):
+    \begin{align*}
+      &\opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
+      \\&= \opLT\brs{\sin( \omega_o x)e^{-\alpha x}\step( x)}
+        && \text{by definition of $\step(x)$}
+        && \text{\xref{def:step}}
+      \\&= \frac{s+\alpha}{(\omega_o)^2 + \omega_o^2}
+        && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
+        && \text{by \prefp{cor:opLT_step} and \prefp{thm:opLT_mod}}
+    \end{align*}
+
+  \item Proof for (2):
+    \begin{align*}
+      &\opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}
+      \\&= \opLT\brs{\sin(-\omega_o x)e^{ \alpha x}\step(-x)}
+        && \text{by definition of $\step(x)$}
+        && \text{\xref{def:step}}
+      \\&= \opLT\brs{-\sin(\omega_o x)e^{ \alpha x}\step(-x)}
+        && \text{by \prope{odd} property of $\sin(x)$}
+        && \text{\xref{thm:sin-x}}
+      \\&= -\opLT\brs{\sin(\omega_o x)e^{ \alpha x}\step(-x)}
+        && \text{by \prope{homogeneous} property}
+        && \text{\xref{thm:opLT_linear}}
+      \\&= \frac{-\omega_o}{(s-\alpha)^2 + \omega_o^2}
+        && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
+        && \text{by \prefp{thm:opLT_mod} and \pref{cor:opLT_step}}
+    \end{align*}
+
+  \item Proof for (3):
+    \begin{align*}
+      &\opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}}
+      \\&= \opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
+         + \opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}
+      \\&= \opLT\brs{\sin( \omega_o x)e^{-\alpha x}\step( x)}
+         + \opLT\brs{\sin(-\omega_o x)e^{ \alpha x}\step(-x)}
+      \\&= \frac{\omega_o}{(s+\alpha)^2 + \omega_o^2} +  \frac{-\omega_o}{(s-\alpha)^2 + \omega_o^2}
+        && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
+    \end{align*}
+%\end{proof}
+
 %%-------------------------------------
 %\begin{example}
 %\label{ex:opLT_sinexp}
@@ -759,51 +854,51 @@ Let $A\eqd\Real(\alpha)$.
 %\end{example}
 %\begin{proof}
 %\begin{enumerate}
-%  \item lemma: \label{ilem:opLT_sinexp}
-%    \\$\begin{array}{>{\ds}rclM}
-%         \lim_{x\to-\infty}\brs{e^{(-s + \alpha + i\beta)x} - e^{(s + \alpha -i\beta)x}}
-%           &=& \brbl{\begin{array}{lMD}
-%                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
-%                 \pm\infty & otherwise                                    & (diverges)
-%               \end{array}}
-%         \\
-%         \lim_{x\to\infty}\brs{e^{(-s -\alpha + i\beta)x} - e^{(s -\alpha -i\beta)x}}
-%           &=& \brbl{\begin{array}{lMD}
-%                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
-%                 \pm\infty & otherwise                                    & (diverges)
-%               \end{array}}
-%       \end{array}$
-%
-%  \item Main proof:
-%    \begin{align*}
-%      \boxed{\opLT\brs{\sin(\beta x)e^{-\alpha\abs{x}}}}
-%        &\eqd \int_{\R} \sin(\beta x)e^{-\alpha\abs{x}} e^{-s x}\dx
-%        && \text{by def. of $\opLT$}&& \text{\xref{def:opLT}}
-%      \\&= \int_{\R} \brs{\frac{e^{i\beta x}-e^{-i\beta x}}{2i}} e^{-\alpha\abs{x}} e^{-s x}\dx
-%        &&  \text{by \thme{Euler's Identity}}&&\text{\xref{thm:eid}}
-%      \\&= \frac{1}{2i}\int_{\R} \brs{e^{-\alpha\abs{x}+i\beta x -sx}-e^{-\alpha\abs{x}-i\beta x-sx}} \dx
-%      \\&= \mathrlap{
-%           \frac{1}{2i}\int_{-\infty}^{0} \brs{e^{(-s + \alpha +i\beta)x} - e^{(-s + \alpha -i\beta)x}} \dx
-%         + \frac{1}{2i}\int_{0}^{\infty}  \brs{e^{(-s - \alpha +i\beta)x} - e^{(-s - \alpha -i\beta)x}} \dx
-%           }
-%      \\&= \mathrlap{
-%           \frac{1}{2i} \brs{\frac{e^{(-s + \alpha +i\beta)x}}{-s +\alpha +i\beta} - \frac{e^{(s +\alpha - i\beta)x}}{s + \alpha -i\beta}}_{-\infty}^{0}
-%         + \frac{1}{2i} \brs{\frac{e^{(-s - \alpha +i\beta)x}}{-s -\alpha +i\beta} - \frac{e^{(s -\alpha - i\beta)x}}{s - \alpha -i\beta}}_{0}^{\infty}
-%           }
-%       %&& \text{by Fundamental Theorem of Calculus}
-%      \\&= \mathrlap{
-%           \frac{1}{2i} \brs{           \frac{1}{-s + \alpha +i\beta} - \frac{1}{ s+ \alpha -i\beta} - (0+0)}
-%         + \frac{1}{2i} \brs{(0+0)-\brp{\frac{1}{-s - \alpha +i\beta} - \frac{1}{ s -\alpha -i\beta}}       }
-%           }
-%      \\&\indentx\text{by \pref{ilem:opLT_sinexp}}
-%      \\&= \mathrlap{
-%           \frac{1}{2i} \brs{ \frac{1}{-s + \alpha +i\beta} + \frac{ 1}{ s -\alpha -i\beta}  }
-%         + \frac{1}{2i} \brs{\frac{-1}{ s + \alpha -i\beta} + \frac{-1}{-s- \alpha +i\beta}  }
-%           }
-%      \\&= 0
-%    \end{align*}
-%\end{enumerate}
-%\end{proof}
+  \item lemma: \label{ilem:opLT_sinexp}
+    \\$\begin{array}{>{\ds}rclM}
+         \lim_{x\to-\infty}\brs{e^{(-s + \alpha + i\beta)x} - e^{(s + \alpha -i\beta)x}}
+           &=& \brbl{\begin{array}{lMD}
+                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
+                 \pm\infty & otherwise                                    & (diverges)
+               \end{array}}
+         \\
+         \lim_{x\to\infty}\brs{e^{(-s -\alpha + i\beta)x} - e^{(s -\alpha -i\beta)x}}
+           &=& \brbl{\begin{array}{lMD}
+                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
+                 \pm\infty & otherwise                                    & (diverges)
+               \end{array}}
+       \end{array}$
+
+  \item Main proof:
+    \begin{align*}
+      \boxed{\opLT\brs{\sin(\beta x)e^{-\alpha\abs{x}}}}
+        &\eqd \int_{\R} \sin(\beta x)e^{-\alpha\abs{x}} e^{-s x}\dx
+        && \text{by def. of $\opLT$}&& \text{\xref{def:opLT}}
+      \\&= \int_{\R} \brs{\frac{e^{i\beta x}-e^{-i\beta x}}{2i}} e^{-\alpha\abs{x}} e^{-s x}\dx
+        &&  \text{by \thme{Euler's Identity}}&&\text{\xref{thm:eid}}
+      \\&= \frac{1}{2i}\int_{\R} \brs{e^{-\alpha\abs{x}+i\beta x -sx}-e^{-\alpha\abs{x}-i\beta x-sx}} \dx
+      \\&= \mathrlap{
+           \frac{1}{2i}\int_{-\infty}^{0} \brs{e^{(-s + \alpha +i\beta)x} - e^{(-s + \alpha -i\beta)x}} \dx
+         + \frac{1}{2i}\int_{0}^{\infty}  \brs{e^{(-s - \alpha +i\beta)x} - e^{(-s - \alpha -i\beta)x}} \dx
+           }
+      \\&= \mathrlap{
+           \frac{1}{2i} \brs{\frac{e^{(-s + \alpha +i\beta)x}}{-s +\alpha +i\beta} - \frac{e^{(s +\alpha - i\beta)x}}{s + \alpha -i\beta}}_{-\infty}^{0}
+         + \frac{1}{2i} \brs{\frac{e^{(-s - \alpha +i\beta)x}}{-s -\alpha +i\beta} - \frac{e^{(s -\alpha - i\beta)x}}{s - \alpha -i\beta}}_{0}^{\infty}
+           }
+       %&& \text{by Fundamental Theorem of Calculus}
+      \\&= \mathrlap{
+           \frac{1}{2i} \brs{           \frac{1}{-s + \alpha +i\beta} - \frac{1}{ s+ \alpha -i\beta} - (0+0)}
+         + \frac{1}{2i} \brs{(0+0)-\brp{\frac{1}{-s - \alpha +i\beta} - \frac{1}{ s -\alpha -i\beta}}       }
+           }
+      \\&\indentx\text{by \pref{ilem:opLT_sinexp}}
+      \\&= \mathrlap{
+           \frac{1}{2i} \brs{ \frac{1}{-s + \alpha +i\beta} + \frac{ 1}{ s -\alpha -i\beta}  }
+         + \frac{1}{2i} \brs{\frac{-1}{ s + \alpha -i\beta} + \frac{-1}{-s- \alpha +i\beta}  }
+           }
+      \\&= 0
+    \end{align*}
+\end{enumerate}
+\end{proof}
 
 %======================================
 \section{Product properties}
