opLT cor:opLT_step proof refactor

--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -382,12 +382,12 @@ and $\step(x)$ the \fncte{unit step} function.
 \begin{proof}
 \begin{align*}
   \opLT\brs{\cos(\omega_o x)\step(x)}(s)
-    &= \frac{1}{2}\opLT\brs{\step(x)}(s-i\omega_o) 
-     + \frac{1}{2}\opLT\brs{\step(x)}(s+i\omega_o) 
-    && 
+    &= \frac{1}{2}\opLT\brs{\step(x)}(s-i\omega_o)
+     + \frac{1}{2}\opLT\brs{\step(x)}(s+i\omega_o)
+    &&
     && \text{by \prope{modulation}}
     && \text{\xref{cor:opLT_mod}}
-  \\&= \frac{1}{2}\brs{\frac{1}{s-i\omega_o}} 
+  \\&= \frac{1}{2}\brs{\frac{1}{s-i\omega_o}}
      + \frac{1}{2}\brs{\frac{1}{s+i\omega_o}}
     && \Real(s) > 0
     && \text{by \prope{causal} property}
@@ -403,12 +403,12 @@ and $\step(x)$ the \fncte{unit step} function.
     && \Real(s) > 0
   \\
   \opLT\brs{\sin(\omega_o x)\step(x)}(s)
-    &= \frac{1}{2}\opLT\brs{\step(x)}(s-i\omega_o) 
-     + \frac{1}{2}\opLT\brs{\step(x)}(s+i\omega_o) 
-    && 
+    &= -\frac{i}{2}\opLT\brs{\step(x)}(s-i\omega_o)
+       +\frac{i}{2}\opLT\brs{\step(x)}(s+i\omega_o)
+    &&
     && \text{by \prope{modulation}}
     && \text{\xref{cor:opLT_mod}}
-  \\&= -\frac{i}{2}\brs{\frac{1}{s-i\omega_o}} 
+  \\&= -\frac{i}{2}\brs{\frac{1}{s-i\omega_o}}
        +\frac{i}{2}\brs{\frac{1}{s+i\omega_o}}
     && \Real(s) > 0
     && \text{by \prope{causal} property}
@@ -422,28 +422,34 @@ and $\step(x)$ the \fncte{unit step} function.
     && \Real(s) > 0
   \\&= \frac{\omega_o}{s^2+\omega_o^2}
     && \Real(s) > 0
-  \\
-  \opLT\brs{\step(-x)\cos(\omega_o x)}
-    &= \opLT\brs{\step(-x)\cos(\omega_o(-x))}
-    && \mathrlap{
-       \text{by \prope{even} property of $\cos(x)$ 
-             \xref{thm:cos-x}}}
+\end{align*}
+
+\begin{align*}
+  \opLT\brs{\step(-x)\cos(\omega_o x)}(s)
+    &= \opLT\brs{\step(-x)\cos(\omega_o(-x))}(s)
+    &&
+    && \text{by \prope{even} property of $\cos(x)$}
+    && \text{\xref{thm:cos-x}}
+  \\&= \opLT\brs{\step(x)\cos(\omega_o x)}(-s)
+    &&
+    && \text{by \prope{reversal}}
+    && \text{\xref{cor:opLT_reversal}}
   \\&= \frac{(-s)}{(-s)^2+\omega_o^2}
     && \Real(s) < 0
-    && \text{by (1) and \prope{reversal}}
-    && \text{\xref{cor:opLT_reversal}}
+    && \text{by (1)}
+    &&
   \\&= \frac{-s}{s^2+\omega_o^2}
     && \Real(s) < 0
   \\
   \opLT\brs{\sin(\omega_o x)\step(-x)}(s)
-    &= \opLT\brs{-\sin(\omega_o(-x))\step(-x)}
-    && \mathrlap{
-       \text{by \prope{odd} property of $\sin(x)$ 
-             \xref{thm:sin-x}}}
+    &= \opLT\brs{-\sin(\omega_o(-x))\step(-x)}(s)
+    &&
+    && \text{by \prope{odd} property of $\sin(x)$}
+    && \text{\xref{thm:sin-x}}
   \\&= -\opLT\brs{\sin(\omega_o(-x))\step(-x)}(s)
-    && \mathrlap{
-       \text{by \prope{homogeneous} property
-       \xref{thm:opLT_linear}}}
+    &&
+    && \text{by \prope{homogeneous} property}
+    && \text{\xref{thm:opLT_linear}}
   \\&= -\opLT\brs{\sin(\omega_o x)\step(x)}(-s)
     &&
     && \text{by \prope{reversal} property}
@@ -451,7 +457,7 @@ and $\step(x)$ the \fncte{unit step} function.
   \\&= -\brs{\frac{\omega_o}{(-s)^2+\omega_o^2}}
     && \Real(s) < 0
     && \text{by (2)}
-    && 
+    &&
   \\&= \frac{-\omega_o}{s^2+\omega_o^2}
     && \Real(s) < 0
 \end{align*}
