opLT proof re-work

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -5877,6 +5877,18 @@
   pages        = {47--87},
   }
 
+@book{shafii2015,
+  isbn         = {9780738672458},
+  isbn10       = {0738672459},
+  title        = {Laplace Transforms Essentials},
+  series       = {Essentials},
+  address      = {Piscataway, New Jersey, USA},
+  author       = {Morteza Shafii-Mousavi},
+  publisher    = {Research \& Education Association},
+  year         = {2015},
+  pages        = {170},
+  }
+
 @misc{shapiro2015,
   author       = {Bruce E. Shapiro},
   title        = {Table of Basic Integrals},
