--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -27,7 +27,7 @@ its notations, especially when they are necessary and happily imagined, are the 
 \begin{definition}
 \footnote{
   \citerpgc{bracewell1978}{219}{007007013X}{Chapter 11 The Laplace transform},
-  \citerpcu{vanderpol1959}{13}{5. Strip of convergence of the Laplace integral}{https://archive.org/details/in.ernet.dli.2015.141269/page/n23/mode/2up},
+  \citerpcu{vanderpol1959}{13}{5. Strip of convergence of the Laplace integral}{https://archive.org/details/in.ernet.dli.2015.141269/page/n23/},
   \citerpcu{levy1958}{2}{``two-sided transformation"}{https://archive.org/details/c_cowles_ieee_Levy/page/n5/mode/2up},
   \citerpcu{betten2008L}{295}{(B.1)}{https://link.springer.com/content/pdf/bbm:978-3-540-85051-9/1.pdf}
   }
@@ -83,58 +83,60 @@ Note also that a $\frac{1}{2\pi}$ scaling factor is included in
 %--------------------------------------
 \begin{theorem}
 \footnote{
-  \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform},
+  \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1: ``Shift" and ``Similarity" entries},
   \citerpcu{levy1958}{15}{Equation 0.8}{https://archive.org/details/c_cowles_ieee_Levy/page/n15/}
   }
 \label{thm:opLT_transversal}
 \label{thm:opLT_shift}
 \label{thm:opLT_dilation}
 %--------------------------------------
-Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
-Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
-and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
-Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
-and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
-\thmbox{\begin{array}{>{\ds}l        c>{\ds}l                                             D     l              @{\hspace{2pt}}l                                             C                       D}
-    \mc{3}{H}{Mapping}                                                                  & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|H}{Domain}    & \mc{1}{|H}{Property}
-  \\\hline
-    \opLT\brs{\fg(x-\alpha)}        &=& e^{-\alpha s} \;\fG(s)                          & for & \Real(s)                    & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\ope{translation})
-  \\\opLT\brs{\fg(\alpha x)}        &=& \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}} & for & \Real\brp{\frac{s}{\alpha}} & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\ope{dilation})
+Let $\opLT\brs{\fg(x)}$ be the \ope{Laplace Transform} \xref{def:opLT} of a function $\fg(x)$.
+Let the \structe{Region of Convergence} of $\opLT[\fg(x)](s)$
+be $A\leq\Real(s)\leq B$ with $\opair{A}{B}\in\R^2$.
+\thmbox{\begin{array}{>{\ds}lc>{\ds}r Dl@{\hspace{2pt}}l CD}
+    \mc{3}{H}{Mapping}                                                   & \mc{3}{|H}{Region of Convergence}                   & \mc{1}{|H}{Domain}    & Property
+  \\\hline%                  & &                                         &     &                             &                 &                       &
+    \opLT\brs{\fg(x-\alpha)} &=& e^{-\alpha s}         \opLT\brs{\fg(x)} & for & \Real(s)                    & \in\intcc{A}{B} & \forall x,\alpha\in\C & (\ope{translation})
+  \\\opLT\brs{\fg(\alpha x)} &=& \frac{1}{\abs{\alpha}}\opLT\brs{\fg(x)} & for & \Real\brp{\frac{s}{\alpha}} & \in\intcc{A}{B} & \forall x,\alpha\in\C & (\ope{dilation})
 \end{array}}
 \end{theorem}
 \begin{proof}
 \begin{align*}
   \opLT\brs{\fg(x-\alpha)}
-    &\eqd \Lscale \int_{x\in\R} \fg(x-\alpha) e^{-sx} \dx                               && \text{by definition of $\opLT$} && \text{\xref{def:opLT}}
-  \\&=    \Lscale \int_{u+\alpha=-\infty}^{u+\alpha=\infty} \fg(u) e^{-s(\alpha+u)} \du && \text{where $u\eqd x-\alpha$}   && \text{$\implies$ $x=\alpha+u$}
-  \\&=    e^{-\alpha s} \;\Lscale \int_{u=-\infty}^{u=\infty} \fg(u) e^{-su} \du        && \text{by property of exponents} && \text{$b^{x+\alpha}=b^xb^\alpha$}
-  \\&=    e^{-\alpha s} \;\Lscale \int_{x=-\infty}^{x=\infty} \fg(x) e^{-sx} \dx        && \text{by change of variable}    && \text{$u\to x$}
-  \\&\eqd e^{-\alpha s} \;\brs{\opLT \fg(x)}                                            && \text{by definition of $\opLT$} && \text{\xref{def:opLT}}
-  \\&\eqd e^{-\alpha s} \;\fG(s)                                                        && \forall \Real(s)\in\intcc{A}{B} && \text{by definition of $\fG(s)$}
+    &\eqd \Lscale \int_{x=-\infty}^{x=\infty} \fg(x-\alpha) e^{-sx} \dx                 &&                              && \text{by definition of $\opLT$} && \text{\xref{def:opLT}}
+  \\&=    \Lscale \int_{u+\alpha=-\infty}^{u+\alpha=\infty} \fg(u) e^{-s(\alpha+u)} \du &&                              && \text{where $u\eqd x-\alpha$}   && \text{$\implies$ $x=\alpha+u$}
+  \\&=    e^{-\alpha s} \;\Lscale \int_{u=-\infty}^{u=\infty} \fg(u) e^{-su} \du        && \forall A \leq\Real(s)\leq B && \text{by property of exponents} && \text{$b^{x+\alpha}=b^xb^\alpha$}
+  \\&\eqd e^{-\alpha s} \;\Lscale \int_{x=-\infty}^{x=\infty} \fg(x) e^{-sx} \dx        && \forall A \leq\Real(s)\leq B && \text{by change of variable}    && \text{$u\to x$}
+  \\&\eqd e^{-\alpha s} \;\brs{\opLT \fg(x)}                                            && \forall A \leq\Real(s)\leq B && \text{by definition of $\opLT$} && \text{\xref{def:opLT}}
+  \\
   \\
   \opLT\brs{\fg(\alpha x)}
     &\eqd \Lscale \int_{x=-\infty}^{x=\infty} \fg(\alpha x) e^{-sx} \dx
+    &&
     && \text{by definition of $\opLT$}
     && \text{\xref{def:opLT}}
-  \\&=    \Lscale \int_{u/\alpha=-\infty}^{u/\alpha=\infty} \fg(u) e^{-s(u/\alpha)} \frac{1}{\alpha}\du && \text{where $u\eqd \alpha x$}   && \text{$\implies$ $x=\frac{u}{\alpha}$}
-  \\&=    \Lscale \frac{1}{\alpha}\int_{u/\alpha=-\infty}^{u/\alpha=\infty} \fg(u) e^{-(s/\alpha)u} \du
+  \\&= \Lscale \int_{u/\alpha=-\infty}^{u/\alpha=\infty} \fg(u) e^{-s(u/\alpha)} \frac{1}{\alpha}\du
+    && 
+    && \text{where $u\eqd \alpha x$}   
+    && \text{$\implies$ $x=\frac{u}{\alpha}$}
+  \\&= \Lscale \frac{1}{\alpha}\int_{u/\alpha=-\infty}^{u/\alpha=\infty} \fg(u) e^{-(s/\alpha)u} \du
+    &&
+    &&
+    &&
   \\&=\mathrlap{
-          \brbl{\begin{array}{>{\ds}rM}
-            \Lscale \frac{1}{\alpha}\int_{u=-\infty}^{u=\infty} \fg(u) e^{-(s/\alpha)u} \du & if $\alpha\ge0$
-          \\[2ex]
-            \Lscale \frac{1}{\alpha}\int_{u=\infty}^{u=-\infty} \fg(u) e^{-(s/\alpha)u} \du & otherwise
-          \end{array}}
-          }
+      \brbl{\begin{array}{>{\ds}lMl}
+               \Lscale \frac{1}{\alpha}\int_{u=-\infty}^{u=\infty} \fg(u) e^{-(s/\alpha)u} \du & if $\alpha\ge0$ & \forall A \leq\Real\brp{\frac{s}{\alpha}}\leq B
+               \\[2ex]
+               \Lscale \frac{1}{\alpha}\int_{u=\infty}^{u=-\infty} \fg(u) e^{-(s/\alpha)u} \du & otherwise       & \forall A \leq\Real\brp{\frac{s}{\alpha}}\leq B
+             \end{array}}}
   \\&=\mathrlap{
-          \brbl{\begin{array}{>{\ds}rM}
-             \Lscale \frac{1}{\alpha}\int_{u=-\infty}^{u=\infty} \fg(u) e^{-(s/\alpha)u} \du & if $\alpha\ge0$
-          \\[2ex]
-            -\Lscale \frac{1}{\alpha}\int_{u=-\infty}^{u=\infty} \fg(u) e^{-(s/\alpha)u} \du & otherwise
-          \end{array}}
-          }
-  \\&=    \frac{1}{\abs{\alpha}} \Lscale \int_{x\in\R} \fg(x) e^{-(s/\alpha)x} \dx   && A \leq\Real\brp{\frac{s}{\alpha}}\leq B && \text{by change of variable $u\to x$}
-  \\&\eqd \frac{1}{\abs{\alpha}}\brs{\opLT \fg(x)}\brp{\frac{s}{\alpha}}             && A \leq\Real\brp{\frac{s}{\alpha}}\leq B && \text{by definition of $\opLT$ \xref{def:opLT}}
-  \\&\eqd \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}}                            && A \leq\Real\brp{\frac{s}{\alpha}}\leq B && \text{by definition of $\fG(s)$}
+      \brbl{\begin{array}{>{\ds}rMl}
+               \Lscale \frac{1}{\alpha}\int_{u=-\infty}^{u=\infty} \fg(u) e^{-(s/\alpha)u} \du & if $\alpha\ge0$ & \forall A \leq\Real\brp{\frac{s}{\alpha}}\leq B
+               \\[2ex]
+              -\Lscale \frac{1}{\alpha}\int_{u=-\infty}^{u=\infty} \fg(u) e^{-(s/\alpha)u} \du & otherwise       & \forall A \leq\Real\brp{\frac{s}{\alpha}}\leq B
+            \end{array}}}
+  \\&=    \frac{1}{\abs{\alpha}} \Lscale \int_{x\in\R} \fg(x) e^{-(s/\alpha)x} \dx   && \forall A \leq\Real\brp{\frac{s}{\alpha}}\leq B && \text{by change of variable}    && u\to x
+  \\&\eqd \frac{1}{\abs{\alpha}}\brs{\opLT \fg(x)}\brp{\frac{s}{\alpha}}             && \forall A \leq\Real\brp{\frac{s}{\alpha}}\leq B && \text{by definition of $\opLT$} && \text{\xref{def:opLT}}
 \end{align*}
 \end{proof}
 
@@ -147,7 +149,7 @@ and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 %--------------------------------------
 Let $\opLT$, $\fG(s)$, $A$, and $B$ be defined as in \prefpp{thm:opLT_transversal}.
 \corbox{\begin{array}{>{\ds}lc>{\ds}l   D       l              @{\hspace{2pt}}l     C                       D}
-    \mc{3}{H}{Mapping}                  & \mc{3}{|H}{Radius of Convergence}       & \mc{1}{|H}{Domain}    & \mc{1}{|H}{Property}
+    \mc{3}{H}{Mapping}                  & \mc{3}{|H}{Region of Convergence}       & \mc{1}{|H}{Domain}    & \mc{1}{|H}{Property}
   \\\hline%                             &     &              &                    &                       &
     \opLT\brs{\fg(-x)}  &=& \fG\brp{-s} & for & \Real\brp{s} & \in\intcc{-B}{-A}  & \forall x,\alpha\in\C & (\ope{reversal})
 \end{array}}
@@ -175,20 +177,21 @@ Let $\opLT$, $\fG(s)$, $A$, and $B$ be defined as in \prefpp{thm:opLT_transversa
 \footnote{
   \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform},
   \citerpcu{betten2008H}{296}{(B.6)}{https://link.springer.com/content/pdf/bbm:978-3-540-85051-9/1.pdf},
-  \citerpcu{levy1958}{13}{Equation 0.2}{https://archive.org/details/c_cowles_ieee_Levy/page/n15/}
+  \citerpcu{levy1958}{13}{Equation 0.2}{https://archive.org/details/c_cowles_ieee_Levy/page/n15/},
+  \citerpcu{vanderpol1959}{22}{Introduction}{https://archive.org/details/in.ernet.dli.2015.141269/page/n31/}
   }
 \label{thm:opLT_linear}
 %--------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
 and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
-Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
-and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
-\thmbox{\begin{array}{>{\ds}l        c>{\ds}l                                             D     l              @{\hspace{2pt}}l                                             C                       D}
-    \mc{3}{H}{Mapping}                                                                  & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|H}{Domain}    & \mc{1}{|H}{Property}
-  \\\hline
-    \opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s)                                 & for & \Real(s)                    & \in\intcc{A}{B}\seti\intcc{C}{D}            & \forall x,\alpha\in\C & (\prope{additive})
-  \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)                                    & for & \Real(s)                    & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\prope{homogeneous})
+Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
+and the \structe{Region of Convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
+\thmbox{\begin{array}{>{\ds}l        c>{\ds}l             D     l              @{\hspace{2pt}}l                                  C                       D}
+    \mc{3}{H}{Mapping}                                  & \mc{3}{|H}{Region of Convergence}                                    & \mc{1}{|H}{Domain}    & \mc{1}{|H}{Property}
+  \\\hline%                         & &                 &                                   &                                  &                       &
+    \opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s) & for & \Real(s)                    & \in\intcc{A}{B}\seti\intcc{C}{D} & \forall x,\alpha\in\C & (\prope{additive})
+  \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)    & for & \Real(s)                    & \in\intcc{A}{B}                  & \forall x,\alpha\in\C & (\prope{homogeneous})
 \end{array}}
 \end{theorem}
 
@@ -198,17 +201,17 @@ and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 %--------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 Let $A$ and $B$ be real numbers such that $\intcc{A}{B}$
-is the \structe{radius of convergence} of $\opLT\brs{\fg(x)}$.
+is the \structe{Region of Convergence} of $\opLT\brs{\fg(x)}$.
 Let $C$ and $D$ be real numbers such that $\intcc{C}{D}$
-is the \structe{radius of convergence} of $\opLT\brs{\ff(x)}$.
+is the \structe{Region of Convergence} of $\opLT\brs{\ff(x)}$.
 Let $A_n$ and $B_n$ be real numbers such that $\intcc{A_n}{B_n}$
-is the \structe{radius of convergence} of $\opLT\brs{\fg_n(x)}$.
+is the \structe{Region of Convergence} of $\opLT\brs{\fg_n(x)}$.
 \corbox{\begin{array}{>{\ds}l                      c  >{\ds}l                                       D     >{\ds}l                                               C}
-    \mc{3}{H}{Mapping}                                                                            & \mc{2}{|H}{Radius of Convergence}                         & \mc{1}{|H}{Domain}
+    \mc{3}{H}{Mapping}                                                                            & \mc{2}{|H}{Region of Convergence}                         & \mc{1}{|H}{Domain}
   \\\hline
     \opLT\brs{ 0                               }  &=&  0                                          & for & \Real(s)\in\intcc{A}{B}                             & \forall x\in\C
   \\\opLT\brs{ -\fg(x)                         }  &=& -\opLT\brs{\fg(x)}                          & for & \Real(s)\in\intcc{A}{B}                             & \forall x\in\C
-  \\\opLT\brs{ \ff(x)-\fg(x)                   }  &=&  \opLT\brs{\fg(x)} - \opLT{\ff(x)}          & for & \Real(s)\in\intcc{A}{B}\seti\intcc{C}{D}            & \forall x\in\C
+  \\\opLT\brs{ \ff(x)-\fg(x)                   }  &=&  \opLT\brs{\fg(x)} - \opLT\brs{\ff(x)}      & for & \Real(s)\in\intcc{A}{B}\seti\intcc{C}{D}            & \forall x\in\C
   \\\opLT\brs{ \sum_{n=1}^\xN \alpha_n\fg_n(x) }  &=&  \sum_{n=1}^\xN \alpha_n\opLT\brs{\fg_n(x)} & for & \Real(s)\in\setopi_{n=1}^\xN\intcc{A_n}{B_n}        & \forall x,\alpha_n\in\C
 \end{array}}
 \end{corollary}
@@ -235,10 +238,10 @@ is the \structe{radius of convergence} of $\opLT\brs{\fg_n(x)}$.
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
 and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
-Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
-and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
+Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
+and the \structe{Region of Convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \thmbox{\begin{array}{>{\ds}l        c>{\ds}l           D     l        @{\hspace{2pt}}l                                C }
-    \mc{3}{H}{Mapping}                                & \mc{3}{|H}{Radius of Convergence}                            & \mc{1}{|H}{Domain}    %& \mc{1}{|H}{Property}
+    \mc{3}{H}{Mapping}                                & \mc{3}{|H}{Region of Convergence}                            & \mc{1}{|H}{Domain}    %& \mc{1}{|H}{Property}
   \\\hline
     \opLT\brs{e^{-\alpha x} \fg(x)} &=& \fG(s+\alpha) & for & \Real(s) & \in\intcc{A-\Real(\alpha)}{B-\Real(\alpha)} & \forall x,\alpha\in\C %& (\ope{modulation})
 \end{array}}
@@ -266,10 +269,10 @@ and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
 and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
-Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
-and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
+Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
+and the \structe{Region of Convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \corbox{\begin{array}{>{\ds}l               c>{\ds}r                                                       D     l        @{\hspace{2pt}}l   C }
-    \mc{3}{H}{Mapping}                                                                                   & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|H}{Domain}    %& \mc{1}{|H}{Property}
+    \mc{3}{H}{Mapping}                                                                                   & \mc{3}{|H}{Region of Convergence}                                               & \mc{1}{|H}{Domain}    %& \mc{1}{|H}{Property}
   \\\hline
     \opLT\brs{\cos\brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o) & for & \Real(s) & \in\intcc{A}{B} & \forall x,\alpha\in\C %& (\ope{modulation})
   \\[2ex]
@@ -321,31 +324,34 @@ The \fnctd{Heaviside step function} $\step(x)$ or \fnctd{unit step function} is 
 \begin{theorem}
 \footnote{
   \citerpgc{bracewell1978}{227}{007007013X}{Table 11.2 Some Laplace transforms}
-  %\citerpcu{vanderpol1959}{13}{5. Strip of convergence of the Laplace integral}{https://archive.org/details/in.ernet.dli.2015.141269/page/n23/mode/2up},
+  %\citerpcu{vanderpol1959}{13}{5. Strip of convergence of the Laplace integral}{https://archive.org/details/in.ernet.dli.2015.141269/page/n23/},
   %\citerpcu{levy1958}{2}{``two-sided transformation"}{https://archive.org/details/c_cowles_ieee_Levy/page/n5/mode/2up}
   }
 \label{thm:opLT_step}
 %---------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function \xref{def:step}.
-\thmbox{\begin{array}{>{\ds}lc>{\ds}r          Dl                                   C                 }
-    \mc{3}{H}{Mapping}                       & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|H}{Domain}
+\thmbox{\begin{array}{F>{\ds}lc>{\ds}r          Dl                                   C                 }
+    \mc{3}{H}{Mapping}                           & \mc{2}{|H}{Region of Convergence} & \mc{1}{|H}{Domain}
   \\\hline
-    \opLT\brs{\step(x)}     &=& \frac{ 1}{s} & for & \Real(s) > 0                  & \forall x\in\R
+    (1). & \opLT\brs{\step(x)}  &=&  \frac{1}{s} & for & \Real(s) > 0 & \forall x\in\R
   \\[2ex]
-    \opLT\brs{\step(-x)}    &=& \frac{-1}{s} & for & \Real(s) < 0                  & x\in\R
+    (2). & \opLT\brs{\step(-x)} &=& -\frac{1}{s} & for & \Real(s) < 0 & \forall x\in\R
 \end{array}}
 \end{theorem}
 \begin{proof}
 \begin{align*}
   \opLT\brs{\step(x)}
     &\eqd \int_\R \step(x) e^{-sx}\dx
+    &&
     && \text{by definition of $\opLT$}
     && \text{\xref{def:opLT}}
   \\&= \int_0^{\infty}  e^{-sx}\dx
+    &&
     && \text{by definition of $\step(x)$}
     && \text{\xref{def:step}}
   \\&= \brlr{\frac{e^{-sx}}{-s}}_0^{\infty}
+    &&
     && \text{by \thme{Fundamental Theorem of Calculus}}
   \\&= \lim_{x\to\infty}\brs{\frac{e^{-sx}}{-s}} - \brp{\frac{e^0}{-s}}
   \\&= 0 + \frac{1}{s}
@@ -354,10 +360,15 @@ and $\step(x)$ the \fncte{unit step} function \xref{def:step}.
     && \forall\Real(s) > 0
   \\\\
   \opLT\brs{\step(-x)}
-    &= \frac{-1}{s}
+    &= \opLT\brs{\step(x)}(-s)
+    && \Real(s) < 0
+    && \text{by \prope{reversal} property}
+    && \text{\xref{cor:opLT_reversal}}
+  \\&= \frac{-1}{s}
     && \Real(s) < 0
    %&& \text{by \ope{reversal} property \xref{cor:opLT_reversal} and \pref{thm:opLT_step}}
-    && \text{by \pref{thm:opLT_step} and \pref{cor:opLT_reversal}}
+    && \text{by \prope{Causality}}
+    && \text{\xref{thm:opLT_step}}
 \end{align*}
 \end{proof}
 
@@ -371,10 +382,10 @@ and $\step(x)$ the \fncte{unit step} function \xref{def:step}.
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 \corbox{\begin{array}{F>{\ds}lc>{\ds}c                                                     D     l                             C }
-    &\mc{3}{H}{Mapping}                                                                  & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|H}{Domain}
+    &\mc{3}{H}{Mapping}                                                                  & \mc{2}{|H}{Region of Convergence} & \mc{1}{|H}{Domain}
   \\\hline
-         (1).& \opLT\brs{\step(x)\cos(\omega_o x)}  &=& \frac{s}{s^2+\omega_o^2}         & for & \Real(s) > 0 & x,\omega_o\in\R
-  \\[2ex](2).& \opLT\brs{\step(x)\sin(\omega_o x)}  &=& \frac{\omega_o}{s^2+\omega_o^2}  & for & \Real(s) > 0 & x,\omega_o\in\R
+         (1).& \opLT\brs{\step( x)\cos(\omega_o x)} &=& \frac{s}{s^2+\omega_o^2}         & for & \Real(s) > 0 & x,\omega_o\in\R
+  \\[2ex](2).& \opLT\brs{\step( x)\sin(\omega_o x)} &=& \frac{\omega_o}{s^2+\omega_o^2}  & for & \Real(s) > 0 & x,\omega_o\in\R
   \\[2ex](3).& \opLT\brs{\step(-x)\cos(\omega_o x)} &=& \frac{-s}{s^2+\omega_o^2}        & for & \Real(s) < 0 & x,\omega_o\in\R
   \\[2ex](4).& \opLT\brs{\step(-x)\sin(\omega_o x)} &=& \frac{-\omega_o}{s^2+\omega_o^2} & for & \Real(s) < 0 & x,\omega_o\in\R
 \end{array}}
@@ -466,6 +477,54 @@ and $\step(x)$ the \fncte{unit step} function.
 %---------------------------------------
 \begin{corollary}
 \footnote{
+  \citerpcu{vanderpol1959}{22}{Introduction}{https://archive.org/details/in.ernet.dli.2015.141269/page/n31/}
+  }
+\label{cor:opLT_stepexp}
+%---------------------------------------
+Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
+and $\step(x)$ the \fncte{unit step} function.
+\corbox{\begin{array}{>{\ds}lc>{\ds}c     D     l                             C }
+    \mc{3}{H}{Mapping}                  & \mc{2}{|H}{Region of Convergence} & \mc{1}{|H}{Domain}
+    \\\hline
+           \opLT\brs{e^{-\alpha x}\step( x)} &=& \frac{1}{s+\alpha}  & for & \Real(s) \geq-\Real(\alpha) & \forall x\in\R;\,\alpha\in\C
+    \\[2ex]\opLT\brs{e^{-\alpha x}\step(-x)} &=& \frac{1}{s+\alpha}  & for & \Real(s) \leq \Real(\alpha) & \forall x\in\R;\,\alpha\in\C
+\end{array}}
+\end{corollary}
+\begin{proof}
+\begin{align*}
+  \opLT\brs{e^{-\alpha x}\step(x)}(s)
+    &= \opLT\brs{\step(x)}(s+\alpha)
+    &&
+    && \text{by \prope{modulation}}
+    && \text{\xref{thm:opLT_mod}}
+  \\&= \frac{1}{s+\alpha}
+    && \forall\Real(s) \in \intcc{0-\Real(\alpha)}{\infty-\Real(\alpha)}
+    && \text{by \prope{causality}}
+    && \text{\xref{thm:opLT_step}}
+  \\&= \frac{1}{s+\alpha}
+    && \forall\Real(s) \geq -\Real(\alpha)
+    && 
+    && 
+  \\\\
+  \opLT\brs{e^{-\alpha x}\step(-x)}(s)
+    &= \opLT\brs{\step(-x)}(s+\alpha)
+    &&
+    && \text{by \prope{modulation}}
+    && \text{\xref{thm:opLT_mod}}
+  \\&= \frac{-1}{s+\alpha}
+    && \forall\Real(s) \in \intcc{-\infty-\Real(\alpha)}{0-(-\Real(\alpha))}
+    && \text{by \prope{anti-causality}}
+    && \text{\xref{thm:opLT_step}}
+  \\&= \frac{-1}{s+\alpha}
+    && \forall\Real(s) \leq \Real(\alpha)
+    && \text{by \prope{anti-causality}}
+    && \text{\xref{thm:opLT_step}}
+\end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{corollary}
+\footnote{
   \citerpgc{bracewell1978}{227}{007007013X}{Table 11.2 Some Laplace transforms}
   }
 \label{cor:opLT_stepcosexp}
@@ -473,15 +532,12 @@ and $\step(x)$ the \fncte{unit step} function.
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 \corbox{\begin{array}{F>{\ds}lc>{\ds}c     D     l                             C }
-    \mc{3}{H}{Mapping}                  & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|H}{Domain}
+    \mc{3}{H}{Mapping}                  & \mc{2}{|H}{Region of Convergence} & \mc{1}{|H}{Domain}
   \\\hline
-           (1).&\opLT\brs{\step(x)\cos(\omega_o x)e^{-\alpha x}} &=& \frac{s+\alpha}{(s+\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
-    \\[2ex](2).&
-    \opLT\brs{\sin(\omega_o x)e^{-\alpha x}\step(x)} &=& \frac{\omega_o}{(s+\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
-    \\[2ex](3).&
-    \opLT\brs{\cos(\omega_o x)e^{\alpha x}\step(-x)} &=& \frac{-s+\alpha}{(s-\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
-    \\[2ex](4).&
-    \opLT\brs{\sin(\omega_o x)e^{\alpha x}\step(-x)} &=& \frac{-\omega_o}{(s-\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
+           (1).&\opLT\brs{\cos(\omega_o x)e^{-\alpha x}\step( x)} &=& \frac{s+\alpha}{(s+\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
+    \\[2ex](2).&\opLT\brs{\sin(\omega_o x)e^{-\alpha x}\step( x)} &=& \frac{\omega_o}{(s+\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
+    \\[2ex](3).&\opLT\brs{\cos(\omega_o x)e^{ \alpha x}\step(-x)} &=& \frac{-s+\alpha}{(s-\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
+    \\[2ex](4).&\opLT\brs{\sin(\omega_o x)e^{ \alpha x}\step(-x)} &=& \frac{-\omega_o}{(s-\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
 \end{array}}
 \end{corollary}
 \begin{proof}
@@ -565,7 +621,7 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
   \\&= \mcom{\frac{s}{s^2+\omega_o^2}}{$\forall \Real(s)>0$}
      + \mcom{\frac{-s}{s^2+\omega_o^2}}{$\forall \Real(s)<0$}
     && \text{by \prefp{cor:opLT_step}}
-  \\&= \brbr{\begin{array}{cl}
+  \\&= \brbl{\begin{array}{cl}
          0      & \forall\Real(s)\in\intoo{-\infty}{0}\seti\intoo{0}{\infty}=\emptyset\\
          \infty & \forall s\in\C
        \end{array}}
@@ -578,7 +634,7 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
   \\&= \mcom{\frac{\omega_o}{s^2+\omega_o^2}}{$\forall \Real(s)>0$}
      + \mcom{\frac{-\omega_o}{s^2+\omega_o^2}}{$\forall \Real(s)<0$}
     && \text{by \prefp{cor:opLT_step}}
-  \\&= \brbr{\begin{array}{cl}
+  \\&= \brbl{\begin{array}{cl}
          0      & \forall\Real(s)\in\intoo{-\infty}{0}\seti\intoo{0}{\infty}=\emptyset\\
          \infty & \forall s\in\C
        \end{array}}
@@ -602,7 +658,7 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 Let $A\eqd\Real(\alpha)$.
 \corbox{\begin{array}{>{\ds}lc>{\ds}l                                    D     l                            C }
-    \mc{3}{H}{Mapping}                                                 & \mc{2}{|H}{Radius of Convergence}& \mc{1}{|H}{Domain}
+    \mc{3}{H}{Mapping}                                                 & \mc{2}{|H}{Region of Convergence}& \mc{1}{|H}{Domain}
   \\\hline%                                                            &                                  &
     \opLT\brs{e^{-\alpha\abs{x}}}  &=& \frac{2\alpha}{\alpha^2 - s^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
 \end{array}}
@@ -652,7 +708,7 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 Let $A\eqd\Real(\alpha)$.
 \corbox{\begin{array}{F>{\ds}lc>{\ds}l                                    D     l                                                    C }
-    &\mc{3}{H}{Mapping}                                                                                            & \mc{2}{|H}{Radius of Convergence}& \mc{1}{|H}{Domain}
+    &\mc{3}{H}{Mapping}                                                                                            & \mc{2}{|H}{Region of Convergence}& \mc{1}{|H}{Domain}
   \\\hline%                                                                                                        &                                  &
     (1).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step( x)}  &=& \frac{ s+\alpha}{(s+\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
   \\(2).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}  &=& \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
@@ -756,13 +812,13 @@ Let $A\eqd\Real(\alpha)$.
     \\$\begin{array}{>{\ds}rclM}
          \lim_{x\to-\infty}\brs{e^{(-s + \alpha + i\beta)x} + e^{(s + \alpha -i\beta)x}}
            &=& \brbl{\begin{array}{lMD}
-                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
+                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (Region of Convergence is $\intoo{-\alpha}{\alpha}$)\\
                  \infty & otherwise                                    & (diverges)
                \end{array}}
          \\
          \lim_{x\to\infty}\brs{e^{(-s -\alpha + i\beta)x} + e^{(s -\alpha -i\beta)x}}
            &=& \brbl{\begin{array}{lMD}
-                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
+                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (Region of Convergence is $\intoo{-\alpha}{\alpha}$)\\
                  \infty & otherwise                                    & (diverges)
                \end{array}}
        \end{array}$
@@ -821,7 +877,7 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 Let $A\eqd\Real(\alpha)$.
 \corbox{\begin{array}{F>{\ds}lc>{\ds}l                                    D     l                                                    C }
-    &\mc{3}{H}{Mapping}                                                                                            & \mc{2}{|H}{Radius of Convergence}& \mc{1}{|H}{Domain}
+    &\mc{3}{H}{Mapping}                                                                                            & \mc{2}{|H}{Region of Convergence}& \mc{1}{|H}{Domain}
   \\\hline%                                                                                                        &                                  &
     (1).& \opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}\step( x)}  &=& \frac{ \omega_o}{(s+\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
   \\(2).& \opLT\brs{\sin(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}  &=& \frac{-\omega_o}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
@@ -880,7 +936,7 @@ Let $A\eqd\Real(\alpha)$.
 %  \opLT\brs{\sin(\beta x)e^{-\alpha\abs{x}}}
 %    = \brbl{\begin{array}{>{\ds}lMD}
 %                0 & for $\Real(s)\in\intoo{-\alpha}{\alpha}$
-%              &%(radius of convergence)
+%              &%(Region of Convergence)
 %              \\
 %              \text{$\pm\infty$ (\prope{divergent})}
 %              & otherwise
@@ -894,13 +950,13 @@ Let $A\eqd\Real(\alpha)$.
 %    \\$\begin{array}{>{\ds}rclM}
 %         \lim_{x\to-\infty}\brs{e^{(-s + \alpha + i\beta)x} - e^{(s + \alpha -i\beta)x}}
 %           &=& \brbl{\begin{array}{lMD}
-%                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
+%                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (Region of Convergence is $\intoo{-\alpha}{\alpha}$)\\
 %                 \pm\infty & otherwise                                    & (diverges)
 %               \end{array}}
 %         \\
 %         \lim_{x\to\infty}\brs{e^{(-s -\alpha + i\beta)x} - e^{(s -\alpha -i\beta)x}}
 %           &=& \brbl{\begin{array}{lMD}
-%                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
+%                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (Region of Convergence is $\intoo{-\alpha}{\alpha}$)\\
 %                 \pm\infty & otherwise                                    & (diverges)
 %               \end{array}}
 %       \end{array}$
