opLT proof rework, shafii2015 reference

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -6410,7 +6410,8 @@
   }
 
 @book{vanderpol1959,
-  author       = {Balth. Van Der Pol and H. Bremmer},
+  authorx      = {Balth. Van Der Pol and H. Bremmer},
+  author       = {Balthasar van der Pol and Hendricus Bremmer},
   year         = {1959},
   title        = {Operational Calculus based on the Two-Sided Laplace Integral},
   url          = {https://archive.org/details/in.ernet.dli.2015.141269/},
