opLT cosh and sinh

--- a/common/harTrig.tex
+++ b/common/harTrig.tex
@@ -1516,6 +1516,7 @@ and the $x$-axis such that
 %---------------------------------------
 \begin{definition}
 \label{def:cosh}
+\label{def:sinh}
 \footnote{
   \citerpu{saxelby1920}{225}{https://archive.org/details/courseinpractica00saxerich/page/225}
   }
