--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -262,7 +262,8 @@ and the \structe{Region of Convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 %--------------------------------------
 \begin{corollary}
 \footnote{
-  \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform}
+  \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform},
+  \citerpgc{shafii2015}{3}{9780738672458}{Table 1, using One-Sided Laplace Transform}
   }
 \label{cor:opLT_mod}
 %--------------------------------------
@@ -271,8 +272,10 @@ Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
 Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
 \corbox{\begin{array}{>{\ds}l@{\hspace{2pt}}c@{\hspace{2pt}}>{\ds}r                                                        Dl@{\hspace{2pt}}l                  C                    D}
     \mc{3}{H}{Mapping}                                                                                    & \mc{3}{|H}{Region of Convergence} & \mc{1}{|H}{Domain} & \mc{1}{|H}{Property}\\\hline
-    \opLT\brs{\cos\brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o) & for & \Real(s) & \in\intcc{A}{B}  & \forall x\in\C     & (\ope{cosine modulation})\\[2ex]
-    \opLT\brs{\sin\brp{\omega_o x} \fg(x)} &=& -\frac{i}{2}\fG(s-i\omega_o) + \frac{i}{2}\fG(s+i\omega_o) & for & \Real(s) & \in\intcc{A}{B}  & \forall x\in\C     & (\ope{sine modulation})
+    \opLT\brs{\cos \brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o) & for & \Real(s) & \in\intcc{A}{B}  & \forall x\in\C     & (\ope{cosine modulation})\\[2ex]
+    \opLT\brs{\sin \brp{\omega_o x} \fg(x)} &=& -\frac{i}{2}\fG(s-i\omega_o) + \frac{i}{2}\fG(s+i\omega_o) & for & \Real(s) & \in\intcc{A}{B}  & \forall x\in\C     & (\ope{sine modulation})  \\[2ex]
+    \opLT\brs{\cosh\brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s- \omega_o) + \frac{1}{2}\fG(s+ \omega_o) & for & \Real(s) & \in\intcc{A}{B}  & \forall x\in\C     & (\ope{cosine modulation})\\[2ex]
+    \opLT\brs{\sinh\brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s- \omega_o) - \frac{1}{2}\fG(s+ \omega_o) & for & \Real(s) & \in\intcc{A}{B}  & \forall x\in\C     & (\ope{cosine modulation})
 \end{array}}
 \end{corollary}
 \begin{proof}
@@ -320,6 +323,50 @@ Let the \structe{Region of Convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$.
           +\frac{i}{2}\opLT\brs{\fg(x)}(s+i\omega)
         && \forall \Real(s)\in\intcc{A}{B}
   \\&=   -\frac{i}{2}\fG(s-i\omega_o) + \frac{i}{2}\fG(s+i\omega_o)
+        && \forall \Real(s)\in\intcc{A}{B}
+        && \text{by definition of $\fG(s)$}
+        &&
+  \\
+  \\
+  &\opLT\brs{\cosh\brp{\omega_o x} \fg(x)}
+  \\&=\mathrlap{
+       \opLT\brs{\brp{\frac{e^{\omega_o x} + e^{-\omega_o x}}{2}} \fg(x)}
+        \qquad\forall \Real(s)\in\intcc{A-\Real(-\omega_o)}{B-\Real(\omega_o)}
+        \qquad\text{by definition of $\cosh(x)$ \xref{def:cosh}}
+        }
+  \\&=     \frac{1}{2}\opLT\brs{e^{ \omega_o x} \fg(x)}(s)
+         + \frac{1}{2}\opLT\brs{e^{-\omega_o x} \fg(x)}(s)
+        && \forall \Real(s)\in\intcc{A-0}{B-0}
+        && \text{by \prope{additive} property}
+        && \text{\xref{thm:opLT_linear}}
+  \\&=     \frac{1}{2}\opLT\brs{\fg(x)}(s-\omega)
+         + \frac{1}{2}\opLT\brs{\fg(x)}(s+\omega)
+        && \forall \Real(s)\in\intcc{A}{B}
+        && \text{by \prope{modulation} prop.}
+        && \text{\xref{thm:opLT_mod}}
+  \\&=   \frac{1}{2}\fG(s-\omega_o) + \frac{1}{2}\fG(s+\omega_o)
+        && \forall \Real(s)\in\intcc{A}{B}
+        && \text{by definition of $\fG(s)$}
+        &&
+  \\
+  \\
+  &\opLT\brs{\sinh\brp{\omega_o x} \fg(x)}
+  \\&=\mathrlap{
+       \opLT\brs{\brp{\frac{e^{\omega_o x} - e^{-\omega_o x}}{2}} \fg(x)}
+        \qquad\forall \Real(s)\in\intcc{A-\Real(-\omega_o)}{B-\Real(\omega_o)}
+        \qquad\text{by definition of $\sinh(x)$ \xref{def:sinh}}
+        }
+  \\&=     \frac{1}{2}\opLT\brs{e^{ \omega_o x} \fg(x)}(s)
+         - \frac{1}{2}\opLT\brs{e^{-\omega_o x} \fg(x)}(s)
+        && \forall \Real(s)\in\intcc{A-0}{B-0}
+        && \text{by \prope{additive} property}
+        && \text{\xref{thm:opLT_linear}}
+  \\&=     \frac{1}{2}\opLT\brs{\fg(x)}(s-\omega)
+         - \frac{1}{2}\opLT\brs{\fg(x)}(s+\omega)
+        && \forall \Real(s)\in\intcc{A}{B}
+        && \text{by \prope{modulation} prop.}
+        && \text{\xref{thm:opLT_mod}}
+  \\&=   \frac{1}{2}\fG(s-\omega_o) - \frac{1}{2}\fG(s+\omega_o)
         && \forall \Real(s)\in\intcc{A}{B}
         && \text{by definition of $\fG(s)$}
         &&
